code/tui/src/app/snapshots/app__state__tests__api_key_catalog_loaded_zh.snap
---
source: code/tui/src/app/state_tests.rs
expression: "crate::app::usage_tests::render(&app, 96, 24)"
---
  .                                                                           [— / —] [仪表盘]

● 已保存 openai 的 API Key，加载了 2 个模型















  ⏸ 手动
  ────────────────────────────────────────────────────────────────────────────────────────────
  >
  ────────────────────────────────────────────────────────────────────────────────── 自动模型

  Enter 发送  ·  shift+tab 模式  ·  shift+↓/↑ 思考
