code/tui/src/app/snapshots/app__state__tests__bigmodel_subscription_browser_login.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                        [— / —] [Dashboard]

            ┌── Config › BigModel ─────────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Browser opened  ·  https://zcode.z.ai/authorize                     │
            │  Cancel sign-in                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ╭─────────│  Esc to return                                                       │─────────╮
  │ > Build └──────────────────────────────────────────────────────────────────────┘         │
  ╰──────────────────────────────────────────────────────────────────────── Automatic model ─╯
