code/tui/src/app/snapshots/app__state__tests__bigmodel_subscription_sign_in.snap
---
source: code/tui/src/app/state_tests.rs
expression: "crate::app::usage_tests::render(&app, 96, 24)"
---
  .                                                                        [— / —] [Dashboard]

            ┌── Config › BigModel ─────────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Sign in to BigModel                                                 │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ╭─────────│  Esc to return                                                       │─────────╮
  │ > Build └──────────────────────────────────────────────────────────────────────┘         │
  ╰──────────────────────────────────────────────────────────────────────── Automatic model ─╯
