code/tui/src/app/snapshots/app__state__tests__chatgpt_external_login_required.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                        [— / —] [Dashboard]








          ┌── ChatGPT subscription › Error ──────────────────────────────────────[✗]─┐
          │                                                                          │
          │  Sign in to ChatGPT in Codex, then reconnect here.                       │
          │                                                                          │
          │  Enter/Esc to close                                                      │
          └──────────────────────────────────────────────────────────────────────────┘




  ────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────── Automatic model
