code/tui/src/app/snapshots/app__state__tests__config_dictation_shortcut.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
  .                                                        [— / —] [Dashboard]  
                                                                                
        ┌── Config ────────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │   General    Providers    Issues                             │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ Search configuration                                    │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │  7 more above                                                │        
        │  Key hint style                                   Contrast + │        
        │  Screen mode                                    fullscreen + │        
        │  Memories                                              off + │        
        │  Automatic Git fetch                                   Off + │        
        │  Git fetch interval                                   180s + │        
        │  Git branch marker                               Powerline + │        
        │  Advisor                                               Off + │        
        │  Dictation shortcut                                    off + │        
        │> Dictation key                                      ctrl+g + │        
  ──────│  Enter/Space change · ←/→ details · Tab tabs · / search      │──────  
  > Buil└──────────────────────────────────────────────────────────────┘        
  ─────────────────────────────────────────────────────────── Automatic model
